syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.orderbook.proto";
package org.loopring.orderbook.proto;

enum OrderStatus {
    ORDER_STATUS_UNKNOWN = 0;
    ORDER_STATUS_NEW = 1;
    ORDER_STATUS_PARTITIAL = 2;
    ORDER_STATUS_FULL = 3;
    ORDER_STATUS_PENDING = 4;
    ORDER_STATUS_SUBMIT_RING = 5;
    ORDER_STATUS_DELAY = 6;
}

message RawOrder {
    string protocol = 1;
    string delegate_address = 2;
    string token_s = 3;
    string token_b = 4;
    string amount_s = 5;
    string amount_b = 6;
    int64 valid_since = 7;
    int64 valid_until = 8;
    string lrc_fee = 9;
    bool buy_no_more_than_amount_b = 10;
    int32 margin_split_percentage = 11;
    string owner = 12;
    string wallet_address = 13;
    string auth_addr = 14;
    string auth_private_key = 15;
    int32 v = 16;
    string r = 17;
    string s = 18;
    string hash = 19;
}

message Order {
    int64 id = 1;
   RawOrder raw_order = 2;
   string dealt_amount_s = 3;
   string dealt_amount_b = 4;
   string delay_cause = 5;
   OrderStatus status = 6;
   string market = 7;
   string side = 8;
   double price = 9;
   int64 createdAt = 10;
   int64 updatedAt = 11;
}

message OrderDeferred {
   string hash = 1;
   int64 deferred_time = 2;
   string cause = 3;
}



